gac_sb/objects/AppCIRentite__c.object
<CustomObject>
    <description>APPLICATION CIR - Les entités d&apos;un client sur l&apos;application CIR pour les consultants</description>
    <fields>
        <fullName>Annee_de_declaration__c</fullName>
        <label>Année de déclaration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1ère année</fullName>
                </value>
                <value>
                    <fullName>2ème année</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 ans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA__c</fullName>
        <description>Chiffre d&apos;affaire</description>
        <label>CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Le contrat auquel est rattaché l&apos;entité</description>
        <label>Contrat</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>EntitesCIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_de_cloture__c</fullName>
        <label>Date de clôture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effectif__c</fullName>
        <label>Effectif</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_fiscale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Si l&apos;entité est intégrée fiscalement à une autre, on la définie ici</description>
        <label>Intégration fiscale</label>
        <referenceTo>AppCIRentite__c</referenceTo>
        <relationshipName>entitesIntegrees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jour_mois_de_cloture_fiscale__c</fullName>
        <label>Date de clôture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>31 Janvier</fullName>
                </value>
                <value>
                    <fullName>28 Février</fullName>
                </value>
                <value>
                    <fullName>31 Mars</fullName>
                </value>
                <value>
                    <fullName>30 Avril</fullName>
                </value>
                <value>
                    <fullName>31 Mai</fullName>
                </value>
                <value>
                    <fullName>30 Juin</fullName>
                </value>
                <value>
                    <fullName>31 Juillet</fullName>
                </value>
                <value>
                    <fullName>31 Août</fullName>
                </value>
                <value>
                    <fullName>30 Septembre</fullName>
                </value>
                <value>
                    <fullName>31 Octobre</fullName>
                </value>
                <value>
                    <fullName>30 Novembre</fullName>
                </value>
                <value>
                    <fullName>31 Décembre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultat_NET__c</fullName>
        <label>Résultat NET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIREN__c</fullName>
        <label>SIREN</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secteur_activite_1__c</fullName>
        <label>Secteur d&apos;activité 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secteur_activite_2__c</fullName>
        <label>Secteur d&apos;activité 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secteur_activite_3__c</fullName>
        <label>Secteur d&apos;activité 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechCleUnique__c</fullName>
        <formula>Contrat__r.ContractNumber +&quot;-&quot;+ Name+ &quot;-&quot;+ SIREN__c + &quot;-&quot;+IF(CONTAINS(Name, &quot;- CII&quot;),&quot;CII&quot;,&quot;CIR&quot;)</formula>
        <label>Tech clé unique</label>
        <type>Text</type>
    </fields>
    <label>[OLD] Entité</label>
    <nameField>
        <label>Nom de l&apos;entité</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Equipe_Consulting__c</fullName>
        <label>Equipe Consulting</label>
    </sharingReasons>
</CustomObject>